Rearranged code to conform to modern amd norms.
No globals!

zc.dojoform is now callable (replaces build_form2).

build_form, alert, confirm, and the call-server logic are gone.

Constructor names are now short.

notes.txt is gone.

--- a/src/zc/dojoform/test-examples/1.html
+++ b/src/zc/dojoform/test-examples/1.html
@@ -8,7 +8,7 @@
   <DIV class='zc-fields'>
     <DIV class='zc-left-fields zc-fieldset'>
       <DIV
-          class='zc-field zope-schema-TextLine required'
+          class='zc-field zc-field-TextLine required'
           id='zc-field-ExampleForm.first_name'
           title='Given name.'
           >
@@ -25,7 +25,7 @@
         </DIV>
       </DIV>
       <DIV
-          class='zc-field zope-schema-TextLine required'
+          class='zc-field zc-field-TextLine required'
           id='zc-field-ExampleForm.last_name'
           title='Family name.'
           >
@@ -42,7 +42,7 @@
         </DIV>
       </DIV>
       <DIV
-          class='zc-field zope-schema-Int required'
+          class='zc-field zc-field-Int required'
           id='zc-field-ExampleForm.age'
           title='Age in years'
           >
@@ -58,7 +58,7 @@
         </DIV>
       </DIV>
       <DIV
-          class='zc-field zope-schema-Text required'
+          class='zc-field zc-field-Text required'
           id='zc-field-ExampleForm.other'
           title='Any other notes'
           >
@@ -75,7 +75,7 @@
     </DIV>
     <DIV class='zc-right-fields zc-fieldset'>
       <DIV
-          class='zc-field zope-schema-TextLine'
+          class='zc-field zc-field-TextLine'
           id='zc-field-ExampleForm.favorite_color'
           >
         <LABEL for='ExampleForm.favorite_color' class='zc-label'>
@@ -91,7 +91,7 @@
         </DIV>
       </DIV>
       <DIV
-          class='zc-field zope-schema-Bool'
+          class='zc-field zc-field-Bool'
           id='zc-field-ExampleForm.happy'
           title='Are they happy?'
           >
@@ -108,7 +108,7 @@
         </DIV>
       </DIV>
       <DIV
-          class='zc-field zc-ajaxform-widgets-ComboBox'
+          class='zc-field zc-field-ComboBox'
           id='zc-field-ExampleForm.pet'
           title="This person's best friend."
           >
@@ -126,7 +126,7 @@
         </DIV>
       </DIV>
       <DIV
-          class='zc-field zope-schema-Choice required'
+          class='zc-field zc-field-Choice required'
           id='zc-field-ExampleForm.temperment'
           title='What is the person like?'
           >
@@ -143,7 +143,7 @@
         </DIV>
       </DIV>
       <DIV
-          class='zc-field zope-schema-Decimal required'
+          class='zc-field zc-field-Decimal required'
           id='zc-field-ExampleForm.weight'
           title='Weight in lbs?'
           >
@@ -160,7 +160,7 @@
         </DIV>
       </DIV>
       <DIV
-          class='zc-field zope-schema-Text required'
+          class='zc-field zc-field-Text required'
           id='zc-field-ExampleForm.description'
           title='What do they look like?'
           >
@@ -175,7 +175,7 @@ Razor sharp scales.'
             ></TEXTAREA>
       </DIV>
       <DIV
-          class='zc-field zc-ajaxform-widgets-Hidden required'
+          class='zc-field zc-field-Hidden required'
           id='zc-field-ExampleForm.secret'
           title="Don't tell anybody"
           >
@@ -188,7 +188,7 @@ Razor sharp scales.'
             />
       </DIV>
       <DIV
-          class='zc-field zc-ajaxform-widgets-NumberSpinner required'
+          class='zc-field zc-field-NumberSpinner required'
           id='zc-field-ExampleForm.siblings'
           title='Number of siblings'
           >
@@ -205,7 +205,7 @@ Razor sharp scales.'
         </DIV>
       </DIV>
       <DIV
-          class='zc-field zope-schema-List required'
+          class='zc-field zc-field-List required'
           id='zc-field-ExampleForm.addresses'
           title='All my wonderful homes'
           >
