--- a/src/zc/dojoform/test-examples/3.html
+++ b/src/zc/dojoform/test-examples/3.html
@@ -5,7 +5,7 @@
   <DIV class='zc-fields'>
     <DIV class='zc-fields zc-fieldset'>
       <DIV
-         class='zc-field zope-schema-TextLine required'
+         class='zc-field zc-field-TextLine required'
          id='zc-field-ExampleForm.first_name'
          title='Given name.'
          >
@@ -23,7 +23,7 @@
         </DIV>
       </DIV>
       <DIV
-         class='zc-field zope-schema-TextLine required'
+         class='zc-field zc-field-TextLine required'
          id='zc-field-ExampleForm.last_name'
          title='Family name.'
          >
@@ -41,7 +41,7 @@
         </DIV>
       </DIV>
       <DIV
-         class='zc-field zope-schema-Bool'
+         class='zc-field zc-field-Bool'
          id='zc-field-ExampleForm.happy'
          title='Are they happy?'
          >
@@ -59,7 +59,7 @@
         </DIV>
       </DIV>
       <DIV
-         class='zc-field zope-schema-Text required'
+         class='zc-field zc-field-Text required'
          id='zc-field-ExampleForm.description'
          title='What do they look like?'
          >
@@ -76,7 +76,7 @@ Razor sharp scales.'
            ></TEXTAREA>
       </DIV>
       <DIV
-         class='zc-field zc-ajaxform-widgets-Hidden required'
+         class='zc-field zc-field-Hidden required'
          id='zc-field-ExampleForm.secret'
          title="Don't tell anybody"
          >
