--- a/src/zc/dojoform/test-examples/6.html
+++ b/src/zc/dojoform/test-examples/6.html
@@ -7,12 +7,12 @@
      xxx>
     <DIV
        dojotype='dijit.layout.ContentPane'
-       id='zc.dojo.zc-right-fields.ExampleForm'
+       id='right-fields'
        region='center'
        splitter='true'
        >
       <DIV
-          class='zc-field zope-schema-TextLine'
+          class='zc-field zc-field-TextLine'
           id='zc-field-ExampleForm.favorite_color'
           >
         <LABEL for='ExampleForm.favorite_color' class='zc-label'>
@@ -28,7 +28,7 @@
         </DIV>
       </DIV>
       <DIV
-          class='zc-field zope-schema-Bool'
+          class='zc-field zc-field-Bool'
           id='zc-field-ExampleForm.happy'
           title='Are they happy?'
           >
@@ -45,7 +45,7 @@
         </DIV>
       </DIV>
       <DIV
-          class='zc-field zc-ajaxform-widgets-ComboBox'
+          class='zc-field zc-field-ComboBox'
           id='zc-field-ExampleForm.pet'
           title="This person's best friend."
           >
@@ -63,7 +63,7 @@
         </DIV>
       </DIV>
       <DIV
-          class='zc-field zope-schema-Choice required'
+          class='zc-field zc-field-Choice required'
           id='zc-field-ExampleForm.temperment'
           title='What is the person like?'
           >
@@ -80,7 +80,7 @@
         </DIV>
       </DIV>
       <DIV
-          class='zc-field zope-schema-Decimal required'
+          class='zc-field zc-field-Decimal required'
           id='zc-field-ExampleForm.weight'
           title='Weight in lbs?'
           >
@@ -97,7 +97,7 @@
         </DIV>
       </DIV>
       <DIV
-          class='zc-field zope-schema-Text required'
+          class='zc-field zc-field-Text required'
           id='zc-field-ExampleForm.description'
           title='What do they look like?'
           >
@@ -112,7 +112,7 @@ Razor sharp scales.'
             ></TEXTAREA>
       </DIV>
       <DIV
-          class='zc-field zc-ajaxform-widgets-Hidden required'
+          class='zc-field zc-field-Hidden required'
           id='zc-field-ExampleForm.secret'
           title="Don't tell anybody"
           >
@@ -125,7 +125,7 @@ Razor sharp scales.'
             />
       </DIV>
       <DIV
-          class='zc-field zc-ajaxform-widgets-NumberSpinner required'
+          class='zc-field zc-field-NumberSpinner required'
           id='zc-field-ExampleForm.siblings'
           title='Number of siblings'
           >
@@ -142,7 +142,7 @@ Razor sharp scales.'
         </DIV>
       </DIV>
       <DIV
-          class='zc-field zope-schema-List required'
+          class='zc-field zc-field-List required'
           id='zc-field-ExampleForm.addresses'
           title='All my wonderful homes'
           >
@@ -175,7 +175,7 @@ Razor sharp scales.'
     </DIV>
     <DIV
        dojotype='dijit.layout.ContentPane'
-       id='zc.dojo.zc-actions.ExampleForm'
+       id='zc.dojoform.actions.ExampleForm'
        region='bottom'
        class='dijitContentPane'
        >
@@ -188,14 +188,14 @@ Razor sharp scales.'
     </DIV>
     <DIV
        dojotype='dijit.layout.ContentPane'
-       id='zc.dojo.zc-left-fields.ExampleForm'
+       id='left-fields'
        region='left'
        splitter='true'
        style='/width: 60%/'
        class='dijitContentPane'
        >
       <DIV
-          class='zc-field zope-schema-TextLine required'
+          class='zc-field zc-field-TextLine required'
           id='zc-field-ExampleForm.first_name'
           title='Given name.'
           >
@@ -212,7 +212,7 @@ Razor sharp scales.'
         </DIV>
       </DIV>
       <DIV
-          class='zc-field zope-schema-TextLine required'
+          class='zc-field zc-field-TextLine required'
           id='zc-field-ExampleForm.last_name'
           title='Family name.'
           >
@@ -229,7 +229,7 @@ Razor sharp scales.'
         </DIV>
       </DIV>
       <DIV
-          class='zc-field zope-schema-Int required'
+          class='zc-field zc-field-Int required'
           id='zc-field-ExampleForm.age'
           title='Age in years'
           >
@@ -245,7 +245,7 @@ Razor sharp scales.'
         </DIV>
       </DIV>
       <DIV
-          class='zc-field zope-schema-Text required'
+          class='zc-field zc-field-Text required'
           id='zc-field-ExampleForm.other'
           title='Any other notes'
           >
