--- a/src/zc/dojoform/test-examples/nested-groups.html
+++ b/src/zc/dojoform/test-examples/nested-groups.html
@@ -1,30 +1,30 @@
 <form  id="ExampleForm" class="zc-form">
   <div class="zc-fields">
     <div class="one zc-fieldset">
-      <div class="zc-field zope-schema-TextLine required"
+      <div class="zc-field zc-field-TextLine required"
            id="zc-field-ExampleForm.first_name" title="Given name" xxx>
       </div>
-      <div class="zc-field zope-schema-TextLine required"
+      <div class="zc-field zc-field-TextLine required"
            id="zc-field-ExampleForm.last_name" title="Family name." xxx>
       </div>
     </div>
     <div class="two zc-fieldset">
-      <div class="zc-field zope-schema-Bool"
+      <div class="zc-field zc-field-Bool"
            id="zc-field-ExampleForm.happy" title="Are they happy?" xxx>
       </div>
-      <div class="zc-field zc-ajaxform-widgets-NumberSpinner required"
+      <div class="zc-field zc-field-NumberSpinner required"
            id="zc-field-ExampleForm.siblings" title="Number of siblings" xxx>
       </div>
-      <div class="zc-field zope-schema-Text required"
+      <div class="zc-field zc-field-Text required"
            id="zc-field-ExampleForm.other" title="Any other notes" xxx>
       </div>
       <div class="three zc-fieldset">
-        <div class="zc-field zope-schema-Text required"
+        <div class="zc-field zc-field-Text required"
              id="zc-field-ExampleForm.description"
              title="What do they look like?" xxx>
         </div>
         <div class="four zc-fieldset">
-          <div class="zc-field zope-schema-List required"
+          <div class="zc-field zc-field-List required"
                id="zc-field-ExampleForm.addresses"
                title="All my wonderful homes" xxx>
           </div>
@@ -32,6 +32,6 @@
       </div>
     </div>
   </div>
-  <div id="zc.dojo.zc-actions.ExampleForm" class="zc-actions" xxx>
+  <div id="zc.dojoform.actions.ExampleForm" class="zc-actions" xxx>
   </div>
 </form>
