--- a/src/zc/dojoform/test-examples/2.html
+++ b/src/zc/dojoform/test-examples/2.html
@@ -5,7 +5,7 @@
   <DIV class='zc-fields'>
     <DIV class='left zc-fieldset' id='left'>
       <DIV
-         class='zc-field zope-schema-TextLine required'
+         class='zc-field zc-field-TextLine required'
          id='zc-field-ExampleForm.first_name'
          title='Given name'
          >
@@ -16,7 +16,7 @@
         </DIV>
       </DIV>
       <DIV
-         class='zc-field zope-schema-TextLine required'
+         class='zc-field zc-field-TextLine required'
          id='zc-field-ExampleForm.last_name'
          title='Family name.'
          >
@@ -29,7 +29,7 @@
     </DIV>
     <DIV class='right zc-fieldset'>
       <DIV
-         class='zc-field zope-schema-Bool'
+         class='zc-field zc-field-Bool'
          id='zc-field-ExampleForm.happy'
          title='Are they happy?'
          >
@@ -40,7 +40,7 @@
         </DIV>
       </DIV>
       <DIV
-         class='zc-field zc-ajaxform-widgets-NumberSpinner required'
+         class='zc-field zc-field-NumberSpinner required'
          id='zc-field-ExampleForm.siblings'
          title='Number of siblings'
          >
@@ -51,7 +51,7 @@
         </DIV>
       </DIV>
       <DIV
-         class='zc-field zope-schema-Text required'
+         class='zc-field zc-field-Text required'
          id='zc-field-ExampleForm.other'
          title='Any other notes'
          >
