Updated to work with wsgidriver and htmlchecker

--- a/src/zc/dojoform/test-examples/1.html
+++ b/src/zc/dojoform/test-examples/1.html
@@ -15,7 +15,9 @@
         <LABEL for='ExampleForm.first_name' class='zc-label'>
           First name
         </LABEL>
-        <DIV class='dijit zc-widget' id='widget_ExampleForm.first_name' xxx>
+        <DIV class='dijit zc-widget'
+             id='widget_ExampleForm.first_name'>
+          ...
                 <INPUT
                    id='ExampleForm.first_name'
                    tabIndex='0'
@@ -32,7 +34,9 @@
         <LABEL for='ExampleForm.last_name' class='zc-label'>
           Last name
         </LABEL>
-        <DIV class='dijit zc-widget' id='widget_ExampleForm.last_name' xxx>
+        <DIV class='dijit zc-widget'
+             id='widget_ExampleForm.last_name'>
+          ...
             <INPUT
                id='ExampleForm.last_name'
                tabIndex='0'
@@ -49,7 +53,8 @@
         <LABEL for='ExampleForm.age' class='zc-label'>
           Age
         </LABEL>
-        <DIV class='dijit zc-widget' id='widget_ExampleForm.age' xxx>
+        <DIV class='dijit zc-widget' id='widget_ExampleForm.age'>
+          ...
             <INPUT
                 id='ExampleForm.age'
                 tabIndex='0'
@@ -81,7 +86,9 @@
         <LABEL for='ExampleForm.favorite_color' class='zc-label'>
           Favorite color
         </LABEL>
-        <DIV class='dijit zc-widget' id='widget_ExampleForm.favorite_color' xxx>
+        <DIV class='dijit zc-widget'
+             id='widget_ExampleForm.favorite_color'>
+          ...
             <INPUT
                 id='ExampleForm.favorite_color'
                 tabIndex='0'
@@ -115,7 +122,8 @@
         <LABEL for='ExampleForm.pet' class='zc-label'>
           Pet
         </LABEL>
-        <DIV class='dijit zc-widget' id='widget_ExampleForm.pet' xxx>
+        <DIV class='dijit zc-widget' id='widget_ExampleForm.pet'>
+          ...
             <INPUT
                 type='text'
                 id='ExampleForm.pet'
@@ -133,7 +141,9 @@
         <LABEL for='ExampleForm.temperment' class='zc-label'>
           Temperment
         </LABEL>
-        <DIV class='dijit zc-widget' id='widget_ExampleForm.temperment' xxx>
+        <DIV class='dijit zc-widget'
+             id='widget_ExampleForm.temperment'>
+          ...
             <INPUT
                 type='text'
                 id='ExampleForm.temperment'
@@ -150,7 +160,8 @@
         <LABEL for='ExampleForm.weight' class='zc-label'>
           Weight
         </LABEL>
-        <DIV class='dijit zc-widget' id='widget_ExampleForm.weight' xxx>
+        <DIV class='dijit zc-widget' id='widget_ExampleForm.weight'>
+          ...
             <INPUT
                 type='text'
                 id='ExampleForm.weight'
@@ -195,7 +206,8 @@ Razor sharp scales.'
         <LABEL for='ExampleForm.siblings' class='zc-label'>
           Siblings
         </LABEL>
-        <DIV class='dijit zc-widget' id='widget_ExampleForm.siblings' xxx>
+        <DIV class='dijit zc-widget' id='widget_ExampleForm.siblings'>
+          ...
             <INPUT
                 type='text'
                 id='ExampleForm.siblings'
@@ -213,18 +225,22 @@ Razor sharp scales.'
           Addresses
         </LABEL>
         <DIV >
-          <DIV role='grid' xxx>
+          <DIV role='grid'>
+            ...
             Street            City        Awesomeness
             123 fake street   fakeville    9
             345 false street  falsetown    9001
           </DIV>
-          <SPAN class='dijit dijitButton' xxx>
+          <SPAN class='dijit dijitButton'>
+            ...
                 <SPAN id='addresses.dojo.new.btn_label'>New</SPAN>
           </SPAN>
-          <SPAN class='dijit dijitButton' xxx>
+          <SPAN class='dijit dijitButton'>
+            ...
                 <SPAN id='addresses.dojo.edit.btn_label'>Edit</SPAN>
           </SPAN>
-          <SPAN class='dijit dijitButton' xxx>
+          <SPAN class='dijit dijitButton'>
+            ...
                 <SPAN id='addresses.dojo.delete.btn_label'>Delete</SPAN>
           </SPAN>
           <INPUT type="hidden" value='{"addresses.street.0":"123 fake street","addresses.city.0":"fakeville","addresses.awesomeness.0":"9","addresses.street.1":"345 false street","addresses.city.1":"falsetown","addresses.awesomeness.1":"9001"}' />
@@ -241,7 +257,8 @@ Razor sharp scales.'
     </DIV>
   </DIV>
   <DIV class='zc-actions'>
-    <SPAN class='dijit zc-action dijitButton' xxx>
+    <SPAN class='dijit zc-action dijitButton'>
+      ...
           <SPAN id='ExampleForm.actions.register_label'>Register</SPAN>
     </SPAN>
   </DIV>
