--- a/src/zc/dojoform/test-examples/2.html
+++ b/src/zc/dojoform/test-examples/2.html
@@ -12,7 +12,8 @@
         <LABEL for='ExampleForm.first_name' class='zc-label'>
           First name
         </LABEL>
-        <DIV class='dijit zc-widget' xxx>
+        <DIV class='dijit zc-widget'>
+          ...
         </DIV>
       </DIV>
       <DIV
@@ -23,7 +24,8 @@
         <LABEL for='ExampleForm.last_name' class='zc-label'>
           Last name
         </LABEL>
-        <DIV class='dijit zc-widget' xxx>
+        <DIV class='dijit zc-widget'>
+          ...
         </DIV>
       </DIV>
     </DIV>
@@ -36,7 +38,8 @@
         <LABEL for='ExampleForm.happy' class='zc-label'>
           Happy
         </LABEL>
-        <DIV class='dijit zc-widget' xxx>
+        <DIV class='dijit zc-widget'>
+          ...
         </DIV>
       </DIV>
       <DIV
@@ -47,7 +50,8 @@
         <LABEL for='ExampleForm.siblings' class='zc-label'>
           Siblings
         </LABEL>
-        <DIV class='dijit zc-widget' xxx>
+        <DIV class='dijit zc-widget'>
+          ...
         </DIV>
       </DIV>
       <DIV
@@ -66,6 +70,7 @@
       </DIV>
     </DIV>
   </DIV>
-  <DIV class='zc-actions' xxx>
+  <DIV class='zc-actions'>
+    ...
   </DIV>
 </FORM>
