--- a/src/zc/dojoform/test-examples/3.html
+++ b/src/zc/dojoform/test-examples/3.html
@@ -12,7 +12,8 @@
         <LABEL for='ExampleForm.first_name' class='zc-label'>
           First name
         </LABEL>
-        <DIV class='dijit zc-widget' xxx>
+        <DIV class='dijit zc-widget'>
+          ...
             <INPUT
                name='first_name'
                type='text'
@@ -30,7 +31,8 @@
         <LABEL for='ExampleForm.last_name' class='zc-label'>
           Last name
         </LABEL>
-        <DIV class='dijit zc-widget' xxx>
+        <DIV class='dijit zc-widget'>
+          ...
             <INPUT
                name='last_name'
                type='text'
@@ -48,7 +50,8 @@
         <LABEL for='ExampleForm.happy' class='zc-label'>
           Happy
         </LABEL>
-        <DIV class='dijit zc-widget' xxx>
+        <DIV class='dijit zc-widget'>
+          ...
           <INPUT
              name='happy'
              type='checkbox'
