--- a/src/zc/dojoform/test-examples/6.html
+++ b/src/zc/dojoform/test-examples/6.html
@@ -4,7 +4,8 @@
      design='heading'
      gutters='false'
      livesplitters='true'
-     xxx>
+    >
+    ...
     <DIV
        dojotype='dijit.layout.ContentPane'
        id='right-fields'
@@ -18,7 +19,9 @@
         <LABEL for='ExampleForm.favorite_color' class='zc-label'>
           Favorite color
         </LABEL>
-        <DIV class='dijit zc-widget' id='widget_ExampleForm.favorite_color' xxx>
+        <DIV class='dijit zc-widget'
+             id='widget_ExampleForm.favorite_color'>
+          ...
             <INPUT
                 id='ExampleForm.favorite_color'
                 tabIndex='0'
@@ -52,7 +55,8 @@
         <LABEL for='ExampleForm.pet' class='zc-label'>
           Pet
         </LABEL>
-        <DIV class='dijit zc-widget' id='widget_ExampleForm.pet' xxx>
+        <DIV class='dijit zc-widget' id='widget_ExampleForm.pet'>
+          ...
             <INPUT
                 type='text'
                 id='ExampleForm.pet'
@@ -70,7 +74,9 @@
         <LABEL for='ExampleForm.temperment' class='zc-label'>
           Temperment
         </LABEL>
-        <DIV class='dijit zc-widget' id='widget_ExampleForm.temperment' xxx>
+        <DIV class='dijit zc-widget'
+             id='widget_ExampleForm.temperment'>
+          ...
             <INPUT
                 type='text'
                 id='ExampleForm.temperment'
@@ -87,7 +93,8 @@
         <LABEL for='ExampleForm.weight' class='zc-label'>
           Weight
         </LABEL>
-        <DIV class='dijit zc-widget' id='widget_ExampleForm.weight' xxx>
+        <DIV class='dijit zc-widget' id='widget_ExampleForm.weight'>
+          ...
             <INPUT
                 type='text'
                 id='ExampleForm.weight'
@@ -132,7 +139,8 @@ Razor sharp scales.'
         <LABEL for='ExampleForm.siblings' class='zc-label'>
           Siblings
         </LABEL>
-        <DIV class='dijit zc-widget' id='widget_ExampleForm.siblings' xxx>
+        <DIV class='dijit zc-widget' id='widget_ExampleForm.siblings'>
+          ...
             <INPUT
                 type='text'
                 id='ExampleForm.siblings'
@@ -150,15 +158,19 @@ Razor sharp scales.'
           Addresses
         </LABEL>
         <DIV >
-          <DIV role='grid' xxx>
+          <DIV role='grid'>
+            ...
           </DIV>
-          <SPAN class='dijit dijitButton' xxx>
+          <SPAN class='dijit dijitButton'>
+            ...
                 <SPAN id='addresses.dojo.new.btn_label'>New</SPAN>
           </SPAN>
-          <SPAN class='dijit dijitButton' xxx>
+          <SPAN class='dijit dijitButton'>
+            ...
                 <SPAN id='addresses.dojo.edit.btn_label'>Edit</SPAN>
           </SPAN>
-          <SPAN class='dijit dijitButton' xxx>
+          <SPAN class='dijit dijitButton'>
+            ...
                 <SPAN id='addresses.dojo.delete.btn_label'>Delete</SPAN>
           </SPAN>
           <INPUT type="hidden" value='{"addresses.street.0":"123 fake street","addresses.city.0":"fakeville","addresses.awesomeness.0":"9","addresses.street.1":"345 false street","addresses.city.1":"falsetown","addresses.awesomeness.1":"9001"}' />
@@ -182,7 +194,8 @@ Razor sharp scales.'
       <SPAN
          class='dijit zc-action'
          widgetId='ExampleForm.actions.register'
-         xxx>
+        >
+        ...
               Register
       </SPAN>
     </DIV>
@@ -202,7 +215,9 @@ Razor sharp scales.'
         <LABEL for='ExampleForm.first_name' class='zc-label'>
           First name
         </LABEL>
-        <DIV class='dijit zc-widget' id='widget_ExampleForm.first_name' xxx>
+        <DIV class='dijit zc-widget'
+             id='widget_ExampleForm.first_name'>
+          ...
                 <INPUT
                    id='ExampleForm.first_name'
                    tabIndex='0'
@@ -219,7 +234,9 @@ Razor sharp scales.'
         <LABEL for='ExampleForm.last_name' class='zc-label'>
           Last name
         </LABEL>
-        <DIV class='dijit zc-widget' id='widget_ExampleForm.last_name' xxx>
+        <DIV class='dijit zc-widget'
+             id='widget_ExampleForm.last_name'>
+          ...
             <INPUT
                id='ExampleForm.last_name'
                tabIndex='0'
@@ -236,7 +253,8 @@ Razor sharp scales.'
         <LABEL for='ExampleForm.age' class='zc-label'>
           Age
         </LABEL>
-        <DIV class='dijit zc-widget' id='widget_ExampleForm.age' xxx>
+        <DIV class='dijit zc-widget' id='widget_ExampleForm.age'>
+          ...
             <INPUT
                 id='ExampleForm.age'
                 tabIndex='0'
