--- a/src/zc/dojoform/test-examples/nested-groups.html
+++ b/src/zc/dojoform/test-examples/nested-groups.html
@@ -2,36 +2,44 @@
   <div class="zc-fields">
     <div class="one zc-fieldset">
       <div class="zc-field zc-field-TextLine required"
-           id="zc-field-ExampleForm.first_name" title="Given name" xxx>
+           id="zc-field-ExampleForm.first_name" title="Given name">
+        ...
       </div>
       <div class="zc-field zc-field-TextLine required"
-           id="zc-field-ExampleForm.last_name" title="Family name." xxx>
+           id="zc-field-ExampleForm.last_name" title="Family name.">
+        ...
       </div>
     </div>
     <div class="two zc-fieldset">
       <div class="zc-field zc-field-Bool"
-           id="zc-field-ExampleForm.happy" title="Are they happy?" xxx>
+           id="zc-field-ExampleForm.happy" title="Are they happy?">
+        ...
       </div>
       <div class="zc-field zc-field-NumberSpinner required"
-           id="zc-field-ExampleForm.siblings" title="Number of siblings" xxx>
+           id="zc-field-ExampleForm.siblings" title="Number of siblings">
+        ...
       </div>
       <div class="zc-field zc-field-Text required"
-           id="zc-field-ExampleForm.other" title="Any other notes" xxx>
+           id="zc-field-ExampleForm.other" title="Any other notes">
+        ...
       </div>
       <div class="three zc-fieldset">
         <div class="zc-field zc-field-Text required"
              id="zc-field-ExampleForm.description"
-             title="What do they look like?" xxx>
+             title="What do they look like?">
+          ...
         </div>
         <div class="four zc-fieldset">
           <div class="zc-field zc-field-List required"
                id="zc-field-ExampleForm.addresses"
-               title="All my wonderful homes" xxx>
+               title="All my wonderful homes">
+            ...
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div id="zc.dojoform.actions.ExampleForm" class="zc-actions" xxx>
+  <div id="zc.dojoform.actions.ExampleForm" class="zc-actions">
+    ...
   </div>
 </form>
